--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <h1>Mao's Portfolio</h1>
   <h2>I'm a Web Developmer</h2>
   <hr/ >
-  <a href="./public/movie_ranking.html">Movie Ranking Project</a>
+  <h3><a href="./public/movie_ranking.html">Movie Ranking Project</a></h3>
   <img src="./assets/images/movie.png" alt="movie_ranking" height=200>
-    <a href="./public/birthday_invite.html">Birthday Invite Project</a>
-    <img src="./assets/images/birthday.png" alt="birthday_invite" height=200>
+  <h3><a href="./public/birthday_invite.html">Birthday Invite Project</a></h3>
+  <img src="./assets/images/birthday.png" alt="birthday_invite" height=200>
 
 
   
